Added beta class TextFile. Justasic is probably going to bitch about the compile warnings. I'll fix them later.

--- a/Config
+++ b/Config
@@ -45,7 +45,8 @@ echo "navn:
 	@\$(PERL) \$(CXX) \$(CFLAGS) -c INIReader.cpp
 	@\$(PERL) \$(CXX) \$(CFLAGS) -c log.cpp
 	@\$(PERL) \$(CXX) \$(CFLAGS) -c clock.cpp
-	@\$(PERL) \$(CXX) \$(CFLAGS) -L. main.o misc.o log.o signal.o module.o Socket.o Sepstream.o privmsg.o command.o channel.o thread.o timers.o user.o INIReader.o process.o clock.o -o \$(PACKAGE) \$(LIBS) -rdynamic" >> $MAKEFILE
+	@\$(PERL) \$(CXX) \$(CFLAGS) -c textfile.cpp
+	@\$(PERL) \$(CXX) \$(CFLAGS) -L. main.o misc.o log.o signal.o module.o Socket.o Sepstream.o privmsg.o command.o channel.o thread.o timers.o user.o INIReader.o process.o clock.o textfile.o -o \$(PACKAGE) \$(LIBS) -rdynamic" >> $MAKEFILE
 # Make sure the folder exists
 if [ -d modules ] ; then
   shopt -s nullglob
