Navn now has custom auto-identification to services depending on the network its on, defined in the config

--- a/bot.example.conf
+++ b/bot.example.conf
@@ -15,11 +15,11 @@
 ##############################################################
 [Connect]
 Server = irc.Flux-Net.net ;The server, Server to connect to (default: irc.flux-net.net)
+Channel = #Test, #Navn ;The main channel, joins this channel on startup (default: #Test)
+Nick = Navn ;The bots Nickname, this is the nickname of the bot (default: Navn)
 #Realname = Navn Bot ;The bots Realname, this is the realname of the bot shown in the GECOS (Default: Bots version)
 Ident = Navn ;The bots Ident shown in the GECOS (Default: Navn)
 Port = 6667 ;The port used to connect to the server. (Default: 6667)
-PID File = navn.pid ;defines the pid file to use (Default: navn.pid)
-
 
 ##############################################################
 #							     #
@@ -29,13 +29,33 @@ PID File = navn.pid ;defines the pid file to use (Default: navn.pid)
 ##############################################################
 
 [Bot]
-Nick = Navn ;The bots Nickname, this is the nickname of the bot (default: Navn)
-Channel = #Test, #Navn ;The main channel, joins this channel on startup (default: #Test)
+PID File = navn.pid ;defines the pid file to use (Default: navn.pid)
 Owner = n00b ;Bot Owner, used to show who manages the bot (default: Derp)
 Password = Test ;This is the owner password, it is used in changing owners, and much more. (default: Navn)
-#NickServ_Account = Navn ;NickServ account to identify (comment out or remove if you dont have one)
-#NickServ_Password = n00bpass ;NickServ password (comment out or remove if you dont have one)
 Socket Timeout = 5 ;timeout (in seconds)it takes for the socket to process NOTE: this affects the cpu usage (default: 5 sec)
+
+##############################################################
+#							     #
+#	         Services Configuration.		     #
+#							     #
+#	     These are the services options.    	     #
+##############################################################
+/* This is where you can have navn identify to services.
+   Most people will use nickserv (and earlier versions of navn didnt support this)
+   but for those who have weird versions of services, this has been added
+   to allow for navn to identify to say QuakeNet's Q bot.
+   Most of how this works is rather straight forward.
+
+  For Send String, %a is for account and %p is for password.
+  Comment out this whole section if you don't have a services account
+*/
+[Services]
+Service = NickServ
+Account = Navn
+Password = my_password
+AutoIdent String = This nickname is registered and protected. If it is your
+Send String = identify %a %p
+Identify on connect = true
 
 ##############################################################
 #							     #
@@ -43,12 +63,14 @@ Socket Timeout = 5 ;timeout (in seconds)it takes for the socket to process NOTE:
 #							     #
 #	     These are the logging options.		     #
 ##############################################################
+/* Log File location, this is where the logging will be stored.
+   It is recommended that this not be empty */
 [Log]
-Log_File = navn.log ;defines the log file (Default: navn.log) 
+Log_File = navn.log 
 
 ##############################################################
 #							     #
-#			Oper Configuration.     	     #
+#		Oper Configuration.     		     #
 #							     #
 #	     This is where the oper info goes   	     #
 ##############################################################
