Added C++11 support though it is enabled by default (as gnuc++ compilers versions 4.4 and up support c++11) because autoconf sucks big balls, added some extra info to segfault handler backtrace messages, added some c++11 specific code, Added isalphibetic and isalphibeticnum, forks of isvalidnick, updated change log. and fuck u shyguy no i will not stop commiting

--- a/Config
+++ b/Config
@@ -21,7 +21,8 @@ echo "AUTOMAKE_OPTIONS 	= foreign" >> $MAKEFILE
 echo "PERL = \$(srcdir)/run-cc.pl" >> $MAKEFILE
 echo "LIBS = -ldl -lnsl -pthread" >> $MAKEFILE
 echo "INCLUDES = -I\$(srcdir)/include -I\$(srcdir)" >> $MAKEFILE
-echo "BUILDFLAGS = \$(INCLUDES) -Wall -Wshadow -ansi -pedantic -fno-leading-underscore -pipe -o" >> $MAKEFILE
+echo "CXXFLAGS = \$(INCLUDES) -std=gnu++0x -Wall -Wshadow -ansi -pedantic -fno-leading-underscore -pipe -o" >> $MAKEFILE
+echo "POSTCOMPILEFLAGS=" >> $MAKEFILE
 echo "beginmsg:
 	@echo \"This bot was created in C++ by Lordofsraam and Justasic from Flux-Net\"
 	@echo \"Navn Version \$(VERSION)\"
@@ -31,25 +32,25 @@ echo "	@echo \" \"
 	@echo \"Build complete. Run './\$(PACKAGE)' to execute the binary.\"" >> $MAKEFILE
 echo "" >> $MAKEFILE
 echo "navn:
-	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(BUILDFLAGS) main.o -c src/main.cpp
-	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(BUILDFLAGS) misc.o -c src/misc.cpp
-	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(BUILDFLAGS) module.o -c src/module.cpp
-	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(BUILDFLAGS) signal.o -c src/signal.cpp
-	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(BUILDFLAGS) Socket.o -c src/Socket.cpp
-	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(BUILDFLAGS) Sepstream.o -c src/Sepstream.cpp
-	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(BUILDFLAGS) process.o -c src/process.cpp
-	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(BUILDFLAGS) thread.o -c src/thread.cpp
-	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(BUILDFLAGS) ircproto.o -c src/ircproto.cpp
-	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(BUILDFLAGS) timers.o -c src/timers.cpp
-	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(BUILDFLAGS) user.o -c src/user.cpp
-	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(BUILDFLAGS) command.o -c src/command.cpp
-	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(BUILDFLAGS) channel.o -c src/channel.cpp
-	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(BUILDFLAGS) INIReader.o -c src/INIReader.cpp
-	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(BUILDFLAGS) log.o -c src/log.cpp
-	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(BUILDFLAGS) clock.o -c src/clock.cpp
-	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(BUILDFLAGS) textfile.o -c src/textfile.cpp
-	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(BUILDFLAGS) xmlfile.o -c src/xmlfile.cpp
-	@\$(PERL) \$(CXX) -g -Wl,--export-dynamic main.o misc.o log.o signal.o module.o Socket.o Sepstream.o ircproto.o command.o channel.o thread.o timers.o user.o INIReader.o process.o clock.o textfile.o xmlfile.o -o \$(PACKAGE) -rdynamic -ldl -lnsl -pthread" >> $MAKEFILE
+	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(CXXFLAGS) main.o -c src/main.cpp \$(POSTCOMPILEFLAGS)
+	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(CXXFLAGS) misc.o -c src/misc.cpp \$(POSTCOMPILEFLAGS)
+	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(CXXFLAGS) module.o -c src/module.cpp \$(POSTCOMPILEFLAGS)
+	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(CXXFLAGS) signal.o -c src/signal.cpp \$(POSTCOMPILEFLAGS)
+	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(CXXFLAGS) Socket.o -c src/Socket.cpp \$(POSTCOMPILEFLAGS)
+	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(CXXFLAGS) Sepstream.o -c src/Sepstream.cpp \$(POSTCOMPILEFLAGS)
+	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(CXXFLAGS) process.o -c src/process.cpp \$(POSTCOMPILEFLAGS)
+	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(CXXFLAGS) thread.o -c src/thread.cpp \$(POSTCOMPILEFLAGS)
+	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(CXXFLAGS) ircproto.o -c src/ircproto.cpp \$(POSTCOMPILEFLAGS)
+	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(CXXFLAGS) timers.o -c src/timers.cpp \$(POSTCOMPILEFLAGS)
+	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(CXXFLAGS) user.o -c src/user.cpp \$(POSTCOMPILEFLAGS)
+	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(CXXFLAGS) command.o -c src/command.cpp \$(POSTCOMPILEFLAGS)
+	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(CXXFLAGS) channel.o -c src/channel.cpp \$(POSTCOMPILEFLAGS)
+	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(CXXFLAGS) INIReader.o -c src/INIReader.cpp \$(POSTCOMPILEFLAGS)
+	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(CXXFLAGS) log.o -c src/log.cpp \$(POSTCOMPILEFLAGS)
+	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(CXXFLAGS) clock.o -c src/clock.cpp \$(POSTCOMPILEFLAGS)
+	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(CXXFLAGS) textfile.o -c src/textfile.cpp \$(POSTCOMPILEFLAGS)
+	@\$(PERL) \$(CXX) -Dnavn_EXPORTS \$(CXXFLAGS) xmlfile.o -c src/xmlfile.cpp \$(POSTCOMPILEFLAGS)
+	@\$(PERL) \$(CXX) -g -Wl,--export-dynamic main.o misc.o log.o signal.o module.o Socket.o Sepstream.o ircproto.o command.o channel.o thread.o timers.o user.o INIReader.o process.o clock.o textfile.o xmlfile.o -o \$(PACKAGE) -rdynamic  \$(POSTCOMPILEFLAGS) \$(LIBS)" >> $MAKEFILE
 # Make sure the folder exists
 if [ -d modules ] ; then
   shopt -s nullglob
@@ -64,8 +65,8 @@ if [ -d modules ] ; then
     soname=$name.so #name only
     #These will be the contents of the file
     echo "$soname:" >> $MAKEFILE
-    echo "	@\$(PERL) \$(CXX) -D"$name"_EXPORTS -fPIC \$(BUILDFLAGS) $name.o -c $file" >> $MAKEFILE #build
-    echo "	@\$(PERL) \$(CXX) -g -ldl -lnsl -pthread -shared -Wl,-soname,$bsoname -o $bsoname $name.o" >> $MAKEFILE #Link
+    echo "	@\$(PERL) \$(CXX) -D"$name"_EXPORTS -fPIC \$(CXXFLAGS) $name.o -c $file \$(POSTCOMPILEFLAGS)" >> $MAKEFILE #build
+    echo "	@\$(PERL) \$(CXX) -g \$(LIBS) -shared -Wl,-soname,$bsoname -o $bsoname $name.o \$(POSTCOMPILEFLAGS)" >> $MAKEFILE #Link
   done
   echo "" >> $MAKEFILE
   echo "modules: "$modulelist >> $MAKEFILE
